--- a/CSS/style.css
+++ b/CSS/style.css
@@ -129,3 +129,54 @@ nav a:hover {
 	background: #2EBC99;
 }
 
+	div{
+		border-radius: 5px;
+	}
+	.contenedor{
+		background-color:#CCC;
+		width:100%;
+		height:100px;
+	}
+	.contenido{
+		height:80px;
+		width:10%;
+		float:left;
+		margin: 10px;
+	}
+
+div.container{
+  height: 500px;
+  width: 100%;
+  background-color:white;
+  display: flex;
+  justify-content: space-between;
+}
+div.div-1{
+  height:130px;
+  background-color:#B6A1E0;
+  flex: 1;
+}
+div.div-2{
+  height: 130px;
+  background-color:#50A0C8;
+  flex: 1;
+  margin-left:15px;
+}
+div.div-3{
+  height: 130px;
+  background-color:#E79DE0;
+  flex: 1;
+  margin-left:15px;
+}
+
+img.img-p{
+  width:200px;
+height:200px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+
+
