--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,235 +1,3 @@
-h1{
-   color:#0423CD;
-}
-body{
- background-color: rgb(250, 250, 250);
-}
-p{
- color:black;
- font-family: Arial Black;
- font-size: 16;
- 
-}
-
-img.img-peque{
-   width:150px;
-   height:145px
-}
-.circular--square {
-  border-radius: 100%;
-  width:150px;
-  height:145px
-}
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-}
-
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-}
-
-nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-nav li {
-    display: inline; /* Hace que los ítems del menú estén en una línea horizontal */
-    margin-right: 20px; /* Espacio entre los ítems del menú */
-}
-
-nav a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 16px;
-}
-
-nav a:hover {
-    text-decoration: underline;
-}
-
-.form-style-6{
-	font: 95% Arial, Helvetica, sans-serif;
-	max-width: 400px;
-	margin: 10px auto;
-	padding: 16px;
-	background: #F7F7F7;
-}
-.form-style-6 h1{
-	background: #43D1AF;
-	padding: 20px 0;
-	font-size: 140%;
-	font-weight: 300;
-	text-align: center;
-	color: #fff;
-	margin: -16px -16px 16px -16px;
-}
-.form-style-6 input[type="text"],
-.form-style-6 input[type="date"],
-.form-style-6 input[type="datetime"],
-.form-style-6 input[type="email"],
-.form-style-6 input[type="number"],
-.form-style-6 input[type="search"],
-.form-style-6 input[type="time"],
-.form-style-6 input[type="url"],
-.form-style-6 textarea,
-.form-style-6 select 
-{
-	-webkit-transition: all 0.30s ease-in-out;
-	-moz-transition: all 0.30s ease-in-out;
-	-ms-transition: all 0.30s ease-in-out;
-	-o-transition: all 0.30s ease-in-out;
-	outline: none;
-	box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	width: 100%;
-	background: #fff;
-	margin-bottom: 4%;
-	border: 1px solid #ccc;
-	padding: 3%;
-	color: #555;
-	font: 95% Arial, Helvetica, sans-serif;
-}
-.form-style-6 input[type="text"]:focus,
-.form-style-6 input[type="date"]:focus,
-.form-style-6 input[type="datetime"]:focus,
-.form-style-6 input[type="email"]:focus,
-.form-style-6 input[type="number"]:focus,
-.form-style-6 input[type="search"]:focus,
-.form-style-6 input[type="time"]:focus,
-.form-style-6 input[type="url"]:focus,
-.form-style-6 textarea:focus,
-.form-style-6 select:focus
-{
-	box-shadow: 0 0 5px #43D1AF;
-	padding: 3%;
-	border: 1px solid #43D1AF;
-}
-
-.form-style-6 input[type="submit"],
-.form-style-6 input[type="button"]{
-	box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	width: 100%;
-	padding: 3%;
-	background: #43D1AF;
-	border-bottom: 2px solid #30C29E;
-	border-top-style: none;
-	border-right-style: none;
-	border-left-style: none;	
-	color: #fff;
-}
-.form-style-6 input[type="submit"]:hover,
-.form-style-6 input[type="button"]:hover{
-	background: #2EBC99;
-}
-
-	div{
-		border-radius: 5px;
-	}
-	.contenedor{
-		background-color:#CCC;
-		width:100%;
-		height:100px;
-	}
-	.contenido{
-		height:80px;
-		width:10%;
-		float:left;
-		margin: 10px;
-	}
-
-div.container{
-  height: 500px;
-  width: 100%;
-  background-color:white;
-  display: flex;
-  justify-content: space-between;
-}
-div.div-1{
-  height:130px;
-  background-color:#B6A1E0;
-  flex: 1;
-}
-div.div-2{
-  height: 130px;
-  background-color:#50A0C8;
-  flex: 1;
-  margin-left:15px;
-}
-div.div-3{
-  height: 130px;
-  background-color:#E79DE0;
-  flex: 1;
-  margin-left:15px;
-}
-
-img.img-p{
-  width:200px;
-height:200px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-
-}
-aside {
-	width: 40%;
-	padding-left: 0.5rem;
-	margin-left: 0.5rem;
-	float:right;
-	box-shadow: inset 5px 0
-5px -5px #29627e;
-	font-style:italic;
-	color:#29627e
-}
-
-div.divisioncita {
-	border: 5px groove rgb(176, 118, 202);
-	padding-top: 50px;
-	padding-right: 50px;
-	padding-bottom: 50px;
-	padding-left: 50px;
-	margin-top: 100px;
-	margin-bottom: 100px;
-	margin-right: 100px;
-	margin-left: 100px;
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-	background-color: #50A0C8;
-	text-align: justify;
-}
-div.divisioncita2{
-	border: 12px groove rgb(89, 89, 185);
-	padding: 50px 30px 50px 50px;
-	margin: 25px 50px 75px 100px;
-
-}
-
-.div{
-	margin: 6rem 12rem;
-	height: 20rem;
-	width: 36rem;
-	background-size: 100% 100%;
-	box-shadow: 20px 20px 10px grey;
-	animation: silder 10s linear infinite;
-}
-
-@keyframes silder {
-	0%{
-		background-image: url(https://media.istockphoto.com/id/517188688/es/foto/paisaje-de-monta%C3%B1a.jpg?s=612x612&w=0&k=20&c=EnSd5sJdxih_svZHscQ5Hfzr3RSOdXO9MpdmKK4CMTs=);
-	}
-	30%{
-		background-image: url(https://st2.depositphotos.com/1852625/5395/i/450/depositphotos_53954927-stock-photo-beautiful-landscape-of-scottish-nature.jpg);
-	}
-	60%{
-		background-image: url(https://st.depositphotos.com/1899425/1623/i/450/depositphotos_16232649-stock-photo-moraine-lake-sunrise-colorful-landscape.jpg);
-	}
-	100%{
-		background-image: url(https://www.shutterstock.com/image-photo/lake-moraine-canada-260nw-1132044410.jpg);
-	}
-}
+a:hover {
+	background-color: yellow;
+  }
